--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,7 +3,7 @@ baseURL = "http://examplesite.com"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "kross-hugo"
-title = "Kross"
+title = "Saakhi"
 
 # css plugins
 [[params.plugins.css]]
@@ -39,8 +39,8 @@ name = "Blog"
 weight = 2
 
 [[menu.main]]
-URL = "portfolio"
-name = "Portfolio"
+URL = "project"
+name = "Project"
 weight = 3
 
 [[menu.main]]
@@ -54,18 +54,18 @@ weight = 4
 home = "Home"
 logo = ""
 # theme color
-theme_color = "#41228e"
+theme_color = "#28bd32"
 # contact info
-phone = "+880 2544 658 256"
-email = "steve.fruits@email.com"
-address = "125/A, CA Commercial Area, California, USA"
+phone = "+91 70120 84337"
+email = "info@saakhi.org.in"
+address = " തളിക്കുളം, ഇരിഞ്ഞാലക്കുട,തൃശൂര്‍, കേരളം - 680 569"
 # meta description
 author = "Johnathan Smith"
 description = "This is meta description"
 # google analytics
 google_analytics_id = "" # Your ID
 # copyright
-copyright = "Copyright &copy; 2021 a Theme by [Gethugothemes](https://gethugothemes.com)"
+copyright = "Designed by [Rithin Jose](https://linkedin/in/rithinja)"
 
 
 # preloader
@@ -90,20 +90,3 @@ map_marker = "images/marker.png"
 [params.cookies]
 enable = true
 expire_days = 2
-
-# social site
-[[params.social]]
-icon = "ti-facebook"
-URL = "#"
-
-[[params.social]]
-icon = "ti-instagram"
-URL = "#"
-
-[[params.social]]
-icon = "ti-dribbble"
-URL = "#"
-
-[[params.social]]
-icon = "ti-twitter-alt"
-URL = "#"
