--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -60,7 +60,7 @@ phone = "+91 70120 84337"
 email = "info@saakhi.org.in"
 address = " തളിക്കുളം, ഇരിഞ്ഞാലക്കുട,തൃശൂര്‍, കേരളം - 680 569"
 # meta description
-author = "Johnathan Smith"
+author = ""
 description = "This is meta description"
 # google analytics
 google_analytics_id = "" # Your ID
