--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -39,7 +39,7 @@ name = "Blog"
 weight = 2
 
 [[menu.main]]
-URL = "project"
+URL = "portfolio"
 name = "Project"
 weight = 3
 
@@ -82,8 +82,8 @@ form_action = "#" # contact form works with : https://formspree.io
 [params.map]
 enable = true
 gmap_api = "https://maps.googleapis.com/maps/api/js?key=&#038;types=(cities)&#038;libraries=places&#038;language=en"
-map_latitude = "51.5223477"
-map_longitude = "-0.1622023"
+map_latitude = "10.4470855"
+map_longitude = "76.0825929"
 map_marker = "images/marker.png"
 
 # cookies
