dns config added

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://saakhi.org.in"
+baseURL = "https://compassionate-booth-0a5bc4.netlify.app"
 languageCode = "en-us"
 summaryLength = "10"
 theme = "website"
